[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdpr-compliance-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — gdpr-compliance-ai-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "ai-governance", "compliance", "meok"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/gdpr-compliance-ai-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
